compiler/src/test/resources/amyc/parser/failing/ClassDefError2.amy
module ClassDef
  case class Foo : Bar
end ClassDef
